syntax = "proto3";

import "cloudstate/entity_key.proto";

package flightdomain;

option java_package = "flightdomain";

message FlightReserved {
    string reservationId = 1;
    string userId = 2;
    string flightNumber = 3;
}

message FlightCancelled {
    string reservationId = 1;
}
